# gwascatalog

./: .bumpversion.cfg  .flake8  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
src/bio2bel_gwascatalog/: __init__.py  __main__.py  cli.py  constants.py  manager.py  models.py  parser.py  version.py
tests/: __init__.py  cases.py  constants.py
