##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_gwascatalog
version = attr: src.bio2bel_gwascatalog.version.VERSION
description = The NHGRI-EBI Catalog of published genome-wide association studies.
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bio2bel/gwascatalog
download_url = https://github.com/bio2bel/gwascatalog/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/gwascatalog/issues
    Source Code = https://github.com/bio2bel/gwascatalog

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search information
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Biological Expression Language
    Bio2BEL

[options]
install_requires =
    bio2bel
    pandas
    pybel
    sqlalchemy
    tqdm

python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_gwascatalog = bio2bel_gwascatalog.cli:main
bio2bel =
    gwascatalog = bio2bel_gwascatalog

[options.packages.find]
where = src

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_gwascatalog

[coverage:paths]
source =
    src/bio2bel_gwascatalog
    .tox/*/lib/python*/site-packages/bio2bel_gwascatalog

[coverage:report]
show_missing = True
